# ModernCppECS

./: .gitignore  CMakeLists.txt  README.md
include/core/: Application.h  InputManager.h  Renderer.h  Window.h
include/core/ecs/: ComponentRegistrations.h  ComponentTraits.h  Entity.h  EntityManager.h
include/core/ecs/Components/: HealthComponent.h  MoveIntentComponent.h  RenderComponent.h  TransformComponent.h  VelocityComponent.h
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  InputManager.cpp  Renderer.cpp  Window.cpp
src/core/ecs/: EntityManager.cpp
src/core/ecs/Components/: HealthComponent.cpp
